--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modeling Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is a simple modeling portfolio website.</p>
+    <div class="container">
+        <h1>[Bhabhi Ka Naam] - Modeling Portfolio</h1>
+        <p>Welcome to my portfolio! I'm passionate about fashion, modeling, and creativity.</p>
+        
+        <h2>About Me</h2>
+        <p>I am an aspiring model, exploring new styles and trends in the fashion industry.</p>
+
+        <h2>Contact</h2>
+        <p>Email: example@email.com</p>
+    </div>
 </body>
 </html>
