--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>[Bhabhi Ka Naam] - Modeling Portfolio</h1>
+        <h1>[shanaya] - Modeling Portfolio</h1>
         <p>Welcome to my portfolio! I'm passionate about fashion, modeling, and creativity.</p>
         
         <h2>About Me</h2>
