--- a/index.html
+++ b/index.html
@@ -3,19 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modeling Portfolio</title>
+    <title>[Bhabhi Ka Naam] - Modeling Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>[Shanaya] - Modeling Portfolio</h1>
-        <p>Welcome to my portfolio! I'm passionate about fashion, modeling, and creativity.</p>
-        
-        <h2>About Me</h2>
-        <p>I am an aspiring model, exploring new styles and trends in the fashion industry.</p>
+    <!-- Navbar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <h2>Contact</h2>
-        <p>Email: example@email.com</p>
+    <!-- Main Content -->
+    <div class="container">
+        <h1>Welcome to [Bhabhi Ka Naam]'s Portfolio</h1>
+        <p>Exploring the world of fashion, elegance, and creativity.</p>
+
+        <h2 id="about">About Me</h2>
+        <p>I am a passionate model, dedicated to bringing fashion and style to life.</p>
+
+        <!-- Instagram Link -->
+        <h2>Follow Me</h2>
+        <p>Check out my latest work on Instagram:</p>
+        <a href="https://www.instagram.com/sanshri74" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" width="40px" alt="Instagram Logo">
+            @sanshri74
+        </a>
+
+        <!-- Gallery Section (For Future) -->
+        <h2 id="gallery">Gallery</h2>
+        <p>More photos coming soon...</p>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 [Bhabhi Ka Naam]. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
