--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Bhabhi Ka Naam] - Modeling Portfolio</title>
+    <title>Shanayaa - Modeling Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,11 +21,11 @@
 
     <!-- Main Content -->
     <div class="container">
-        <h1>Welcome to [Bhabhi Ka Naam]'s Portfolio</h1>
+        <h1>Welcome to Shanayaa's Portfolio</h1>
         <p>Exploring the world of fashion, elegance, and creativity.</p>
 
         <h2 id="about">About Me</h2>
-        <p>I am a passionate model, dedicated to bringing fashion and style to life.</p>
+        <p>I am Shanayaa, a passionate model, dedicated to bringing fashion and style to life.</p>
 
         <!-- Instagram Link -->
         <h2>Follow Me</h2>
@@ -42,7 +42,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 [Bhabhi Ka Naam]. All Rights Reserved.</p>
+        <p>© 2025 Shanayaa. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
